update script